# zaofu

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  DISCLAIMER.md  LICENSE  PUBLIC_EXPORT_MANIFEST.md  README.md  README.zh-CN.md  feishu.yaml  pyproject.toml  zf.yaml
channel_roles/: arch.md  automation-reporter.md  critic.md  dev-reviewer.md  facilitator.md  owner-delegate.md  product-pm.md  qa-analyst.md  researcher.md  security-reviewer.md  spine-reviewer.md  synthesizer.md  tech-leader.md
examples/: autoresearch-review-fanout-codex.yaml  code-assist.yaml  design-first.yaml  dev-claude-backends.yaml  dev-codex-star.yaml  dev-mixed-backends.yaml  feishu-bridge-watch.yaml  hermes-codex.yaml  hermes-mixed.yaml  hermes-refactor-product-delivery-wave.yaml  kind-dag-chain.yaml  kind-lane-pipeline.yaml  kind-star-reader.yaml  loop-minimal.yaml  minimal.yaml  mixed-team.yaml  pane-grid-team.yaml  safe-team.yaml  star-critic-review-reader.yaml  star-refactor-planning-reader.yaml  star-supervisor-worker-writer.yaml  workflow-product-fanout-standard-codex.yaml  workflow-product-standard-codex.yaml  zf-codex.yaml  zf-full-codex.yaml  zf-mixed.yaml  zf-standard-codex.yaml  zf-strict-codex.yaml  zf.yaml
scripts/: dev-premerge-gate.sh  feishu-bridge-watch.sh  install-git-hooks.sh  progress.sh  run-flow-smoke.sh  worktree-doctor.py
skills/: INDEX.md
tests/: conftest.py  test_acceptance_criteria.py  test_action_orchestrator.py  test_adapter_skill_resolver.py  test_affinity_review_scope.py  test_agent_session_output.py  test_agent_usage_backend_field.py  test_agents_md.py  (+701 more)
(+1213 files in other folders)
